--- a/SMBB/MainWindow.xaml
+++ b/SMBB/MainWindow.xaml
@@ -5,13 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SMBB"
         mc:Ignorable="d"
-        Title="Simple Multi Brstm Builder v0.3" Height="440" Width="400" ResizeMode="CanMinimize">
+        Title="Simple Multi Brstm Builder v0.3" Height="470" Width="400" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
             <RowDefinition Height="20"/>
             <RowDefinition Height="10"/>
             <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="10"/>
             <RowDefinition Height="20"/>
             <RowDefinition Height="10"/>
             <RowDefinition Height="20"/>
@@ -37,7 +39,9 @@
             <ComboBoxItem>7ch</ComboBoxItem>
             <ComboBoxItem>8ch</ComboBoxItem>
         </ComboBox>
-        <GroupBox Grid.Row="7" Header="ループ設定" Margin="20,0,20,0">
+        <TextBlock Grid.Row="8" Text="ファイナルラップ用BRSTM" Margin="38,0,0,0"></TextBlock>
+        <CheckBox x:Name="finalLapCheckBox"  Grid.Row="8" Content="" IsChecked="False" Margin="20,0,0,0" Click="finalLapCheckBox_Click" />
+        <GroupBox Grid.Row="9" Header="ループ設定" Margin="20,0,20,0">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="10"/>
@@ -65,7 +69,7 @@
                 <Button x:Name="lpSaveButton" Grid.Row="7" Margin="10,0,10,0" Grid.Column="1" Click="lpSaveButton_Click" IsEnabled="False">ループ設定保存</Button>
             </Grid>
         </GroupBox>
-        <TextBlock x:Name="progressText" Grid.Row="9" Margin="20,0,20,0"></TextBlock>
-        <Button x:Name="buildBrstm" Grid.Row="10" Margin="82,15,82,15" IsEnabled="False" Click="buildBrstm_Click">BRSTM作成</Button>
+        <TextBlock x:Name="progressText" Grid.Row="11" Margin="20,0,20,0"></TextBlock>
+        <Button x:Name="buildBrstm" Grid.Row="12" Margin="82,15,82,15" IsEnabled="False" Click="buildBrstm_Click">BRSTM作成</Button>
     </Grid>
 </Window>
