--- a/SMBB/MainWindow.xaml
+++ b/SMBB/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SMBB"
         mc:Ignorable="d"
+        xmlns:properties="clr-namespace:SMBB.Properties"
         Title="Simple Multi Brstm Builder v0.5" Height="470" Width="400" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
@@ -22,13 +23,13 @@
             <RowDefinition Height="20"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="変換する音声ファイル:" Margin="20,0"></TextBlock>
+        <TextBlock Grid.Row="0" Text="{x:Static properties:Resources.ImportAudioLabel}" Margin="20,0"></TextBlock>
         <TextBox x:Name="wavPathShow" Grid.Row="1" Height="20" Margin="20,0,62,0" IsReadOnly="True"></TextBox>
         <Button x:Name="wavButton" Grid.Row="1" Margin="322,0,24,0"  Click="wavButton_Click">...</Button>
-        <TextBlock Grid.Row="3" Text="BRSTM保存先:" Margin="20,0"></TextBlock>
+        <TextBlock Grid.Row="3" Text="{x:Static properties:Resources.DestinationLabel}" Margin="20,0"></TextBlock>
         <TextBox x:Name="brstmPathShow"  Grid.Row="4" Height="20" Margin="20,0,62,0" IsReadOnly="True"></TextBox>
         <Button x:Name="brstmButton" Grid.Row="4" Margin="322,0,24,0" Click="brstmButton_Click">...</Button>
-        <TextBlock Grid.Row="6" Text="チャンネル数:" Margin="20,0"></TextBlock>
+        <TextBlock Grid.Row="6" Text="{x:Static properties:Resources.ChannelLabel}" Margin="20,0"></TextBlock>
         <ComboBox x:Name="channelCountSelect" Grid.Row="6" Margin="92,0,20,0" SelectedIndex="1" SelectionChanged="ComboBox_SelectionChanged">
             <ComboBoxItem>1ch</ComboBoxItem>
             <ComboBoxItem>2ch</ComboBoxItem>
@@ -39,9 +40,9 @@
             <ComboBoxItem>7ch</ComboBoxItem>
             <ComboBoxItem>8ch</ComboBoxItem>
         </ComboBox>
-        <TextBlock Grid.Row="8" Text="ファイナルラップ用BRSTM" Margin="38,0,0,0"></TextBlock>
+        <TextBlock Grid.Row="8" Text="{x:Static properties:Resources.FinalLapBuildLabel}" Margin="38,0,0,0"></TextBlock>
         <CheckBox x:Name="finalLapCheckBox"  Grid.Row="8" Content="" IsChecked="False" Margin="20,0,0,0" Click="finalLapCheckBox_Click" />
-        <GroupBox Grid.Row="9" Header="ループ設定" Margin="20,0,20,0">
+        <GroupBox Grid.Row="9" Header="{x:Static properties:Resources.LoopSettingAreaLabel}" Margin="20,0,20,0">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="10"/>
@@ -59,17 +60,17 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <CheckBox x:Name="loopCheckBox"  Grid.Row="1" Content="" IsChecked="False" Margin="10,0,0,0" Click="loopCheckBox_Click"/>
-                <TextBlock Grid.Row="1" Text="ループさせる" Margin="28,0,0,0" Grid.ColumnSpan="2"></TextBlock>
-                <TextBlock Grid.Row="1" Text="ループ開始(サンプル数):" Margin="128,0,93,0" Grid.ColumnSpan="2"></TextBlock>
+                <TextBlock Grid.Row="1" Text="{x:Static properties:Resources.LoopToggleLabel}" Margin="28,0,0,0" Grid.ColumnSpan="2"></TextBlock>
+                <TextBlock Grid.Row="1" Text="{x:Static properties:Resources.LoopStartValueLabel}" Margin="128,0,93,0" Grid.ColumnSpan="2"></TextBlock>
                 <TextBox x:Name="loopStartText" Grid.Row="1" Height="20" Margin="80,0,0,0" Grid.Column="1" Text="0"  IsEnabled="False" LostFocus="loopStartText_LostFocus" TextChanged="loopStartText_TextChanged"/>
-                <TextBlock Grid.Row="3" Text="ループ終了(サンプル数):" Margin="128,0,93,0" Grid.ColumnSpan="2"></TextBlock>
+                <TextBlock Grid.Row="3" Text="{x:Static properties:Resources.LoopEndValueLabel}" Margin="128,0,93,0" Grid.ColumnSpan="2"></TextBlock>
                 <TextBox x:Name="loopEndText" Grid.Row="3" Height="20" Margin="80,0,0,0" Grid.Column="1" Text="0" IsEnabled="False" TextChanged="loopEndText_TextChanged" LostFocus="loopEndText_LostFocus"/>
                 <TextBlock x:Name="sampleWarnText" Foreground="Red" Grid.Row="5" Grid.ColumnSpan="2" Margin="20,0,0,0"></TextBlock>
-                <Button x:Name="lpLoadButton" Grid.Row="7" Margin="10,0,10,0" Click="lpLoadButton_Click" IsEnabled="False">ループ設定読み込み</Button>
-                <Button x:Name="lpSaveButton" Grid.Row="7" Margin="10,0,10,0" Grid.Column="1" Click="lpSaveButton_Click" IsEnabled="False">ループ設定保存</Button>
+                <Button x:Name="lpLoadButton" Grid.Row="7" Margin="10,0,10,0" Click="lpLoadButton_Click" IsEnabled="False" Content="{x:Static properties:Resources.LoadLoopSettingLabel}"></Button>
+                <Button x:Name="lpSaveButton" Grid.Row="7" Margin="10,0,10,0" Grid.Column="1" Click="lpSaveButton_Click" IsEnabled="False" Content="{x:Static properties:Resources.SaveLoopSettingLabel}"></Button>
             </Grid>
         </GroupBox>
         <TextBlock x:Name="progressText" Grid.Row="11" Margin="20,0,20,0"></TextBlock>
-        <Button x:Name="buildBrstm" Grid.Row="12" Margin="82,15,82,15" IsEnabled="False" Click="buildBrstm_Click">BRSTM作成</Button>
+        <Button x:Name="buildBrstm" Grid.Row="12" Margin="82,15,82,15" IsEnabled="False" Click="buildBrstm_Click" Content="{x:Static properties:Resources.BuildStartLabel}"></Button>
     </Grid>
 </Window>
